append Traceback to the ticket created in report-issue of 500 page

--- a/corehq/apps/hqwebapp/templates/500.html
+++ b/corehq/apps/hqwebapp/templates/500.html
@@ -34,6 +34,7 @@
                 <input type="hidden" id="bug-report-500-now" name="now" value="true" />
                 <input type="hidden" id="bug-report-500-when" name="when" value="right now" />
                 <input type="hidden" name="five-hundred-report" value="true" />
+                <input type="hidden" id="bug-report-500t-traceback" name="500traceback" value="{{ 500traceback }}"/>
 
                 {{ now }}
                 <fieldset>
