--- a/corehq/apps/app_manager/templates/app_manager/partials/form_tab_settings.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/form_tab_settings.html
@@ -51,12 +51,12 @@
         </div>
 
         <legend>
-        <a class="accordion-toggle" data-toggle="collapse" data-bind="attr: {href: '#' + id}, css: {collapsed: reallyCollapse}" href="#form-settings-advanced">
+        <a class="accordion-toggle collapsed" data-toggle="collapse" data-bind="attr: {href: '#' + id}, css: {collapsed: reallyCollapse}" href="#form-settings-advanced">
             <i class="icon-double-angle-down"></i>
             <span data-bind="text: title">Advanced</span>
         </a>
         </legend>
-        <div class="collapse collapse" data-bind="attr: {id: id}, css: {'in': !reallyCollapse()}" id="form-settings-advanced" style="overflow: hidden;">
+        <div class="collapse" data-bind="attr: {id: id}, css: {'in': !reallyCollapse()}" id="form-settings-advanced" style="overflow: hidden;">
             <div class="control-group" data-bind="
                 visible: visible,
                 css: {error: hasError()}">
