--- a/corehq/apps/userreports/templates/userreports/create_new_report_builder.html
+++ b/corehq/apps/userreports/templates/userreports/create_new_report_builder.html
@@ -1,3 +1,7 @@
 {% extends "reports_core/base_template_new.html" %}
 {% load hq_shared_tags %}
 {% load i18n %}
+
+
+{% block main_column %}
+{% endblock %}
