--- a/corehq/apps/userreports/templates/userreports/create_new_report_builder.html
+++ b/corehq/apps/userreports/templates/userreports/create_new_report_builder.html
@@ -1,7 +1,9 @@
 {% extends "reports_core/base_template_new.html" %}
+{% load crispy_forms_tags %}
 {% load hq_shared_tags %}
 {% load i18n %}
 
 
 {% block main_column %}
+    {% crispy create_new_report_builder_form %}
 {% endblock %}
