--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -21,7 +21,15 @@
             <tr data-bind="css: {info: isTab}, attr: {'data-order': _sortableOrder, 'tabindex': 1000 + $index()},
                            copy: function () { return copyCallback(); },
                            paste: function (data) { $parent.pasteCallback(data, $index() + 1); }">
-                <td class="detail-screen-icon" data-bind="jqueryElement: $grip, visible: $root.edit"></td>
+                <td class="detail-screen-icon" data-bind="visible: $root.edit">
+                    <span class="sort-disabled" data-bind="ifnot: grip"></span>
+                    <i class="grip sortable-handle" data-bind="
+                        if: grip,
+                        css: COMMCAREHQ.icons.GRIP,
+                        style: {cursor: 'move'},
+                        event: {mousedown: function(){ $(':focus').blur(); }}
+                    "></i>
+                </td>
                 <!--ko if: !isTab -->
                     <td class="detail-screen-field control-group"
                         data-bind="css: {error: showWarning}">
