Rework warnings on the case detail page
- Remove redundant field validation
- Move markdup out of js and into template/knockout

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
@@ -116,7 +116,11 @@
 
                     <td class="detail-screen-field control-group" data-bind="css: {error: showWarning}">
                         <div data-bind="jqueryElement: textField.ui"></div>
-                        <div data-bind="jqueryElement: warningElement, visible: showWarning"></div>
+                        <div data-bind="visible: showWarning">
+                            <span class="help-inline" data-bind="
+                                text: DetailScreenConfig.field_format_warning_message
+                            "></span>
+                        </div>
                     </td>
 
                     <td>
