--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -35,7 +35,12 @@
                         data-bind="css: {error: showWarning}">
                         <div data-bind="html: CC_DETAIL_SCREEN.getFieldHtml(field.val()), visible: !field.edit"></div>
                         <div data-bind="jqueryElement: field.ui, visible: field.edit"></div>
-                        <div data-bind="jqueryElement: format_warning, visible: showWarning"></div>
+                        <div data-bind="visible: showWarning">
+                            <span class="help-inline" data-bind="
+                                text: DetailScreenConfig.field_format_warning_message
+                            ">
+                            <span/>
+                        </div>
                     </td>
                     <td class="detail-screen-header" data-bind="jqueryElement: header.ui"></td>
                     <td class="detail-screen-format" data-bind="jqueryElement: $format"></td>
