--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -2,14 +2,19 @@
 {% load hq_shared_tags %}
 
 <div>
-    <p data-bind="text: DetailScreenConfig.message.EMPTY_SCREEN, visible: !$root.edit && _.isEmpty(columns)"></p>
     <table class="table table-condensed detail-screen-table">
         <thead>
             <tr tabindex="999" data-bind="paste: function (data) { pasteCallback(data, 0); }">
                 <th class="detail-screen-icon"></th>
-                <th class="detail-screen-field" data-bind="text: DetailScreenConfig.message.FIELD"></th>
-                <th class="detail-screen-header" data-bind="text: DetailScreenConfig.message.HEADER"></th>
-                <th class="detail-screen-format" data-bind="text: DetailScreenConfig.message.FORMAT"></th>
+                <th class="detail-screen-field" data-bind="
+                    text: {% block field_column_header %}DetailScreenConfig.message.FIELD{% endblock %}
+                "></th>
+                <th class="detail-screen-header" data-bind="
+                    text: {% block display_text_column_header %}DetailScreenConfig.message.HEADER{% endblock %}
+                "></th>
+                <th class="detail-screen-format" data-bind="
+                    text: {% block format_column_header %}DetailScreenConfig.message.FORMAT{% endblock %}
+                "></th>
                 <th class="detail-screen-icon"></th>
             </tr>
         </thead>
@@ -18,9 +23,11 @@
             afterAdd: function (elem) { $(elem).hide().fadeIn() },
             beforeRemove: function (elem) { $(elem).fadeOut() }
         }">
-            <tr data-bind="css: {info: isTab}, attr: {'data-order': _sortableOrder, 'tabindex': 1000 + $index()},
-                           copy: function () { return copyCallback(); },
-                           paste: function (data) { $parent.pasteCallback(data, $index() + 1); }">
+            <tr data-bind="
+                css: {info: isTab},
+                attr: {'data-order': _sortableOrder, 'tabindex': 1000 + $index()},
+                copy: function () { return copyCallback(); },
+                paste: function (data) { $parent.pasteCallback(data, $index() + 1); }">
                 <td class="detail-screen-icon" data-bind="visible: $root.edit">
                     <span class="sort-disabled" data-bind="ifnot: grip"></span>
                     <i class="grip sortable-handle" data-bind="
@@ -30,6 +37,8 @@
                         event: {mousedown: function(){ $(':focus').blur(); }}
                     "></i>
                 </td>
+
+                {% block field_cell %}
                 <!--ko if: !isTab -->
                     <td class="detail-screen-field control-group"
                         data-bind="css: {error: showWarning}">
@@ -42,12 +51,24 @@
                             <span/>
                         </div>
                     </td>
-                    <td class="detail-screen-header" data-bind="jqueryElement: header.ui"></td>
-                    <td class="detail-screen-format" data-bind="jqueryElement: $format"></td>
                 <!--/ko-->
-                <!--ko if: isTab -->
+                {% endblock %}
+
+                {% block display_text_cell %}
+                <!--ko if: !isTab -->
+                    <td class="detail-screen-header" data-bind="jqueryElement: header.ui"></td>
+                <!--/ko-->
+                <!-- ko if: isTab -->
                     <td colspan="3" data-bind="jqueryElement: header.ui"></td>
                 <!--/ko-->
+                {% endblock %}
+
+                {% block format_cell %}
+                <!-- ko if: !isTab -->
+                    <td class="detail-screen-format" data-bind="jqueryElement: $format"></td>
+                <!--/ko-->
+                {% endblock %}
+
                 <td class="detail-screen-icon" data-bind="jqueryElement: $delete, visible: $root.edit"></td>
             </tr>
         </tbody>
@@ -55,6 +76,7 @@
             <tr>
                 <td></td>
                 <td colspan="4">
+                    {% block add_property_button %}
                     <div class="btn-group">
                         <button class="btn add-property-item" data-bind="click: addProperty">Add Property</button>
                         {% if request|feature_preview_enabled:'CALC_XPATHS' or request|toggle_enabled:'GRAPH_CREATION' %}
@@ -77,6 +99,7 @@
                         </ul>
                         {% endif %}
                     </div>
+                    {% endblock %}
                 </td>
             </tr>
         </tbody>
