Pathways report feedback rows 31-34

--- a/custom/care_pathways/templates/care_pathways/adoption_bar_chart_report.html
+++ b/custom/care_pathways/templates/care_pathways/adoption_bar_chart_report.html
@@ -4,6 +4,7 @@
 {% load i18n %}
 
 {% block js-inline %}
+    <link href="{% static 'care_pathways/css/care_pathways.css' %}" rel="stylesheet"/>
     <script type="text/javascript">
         $(function() {
             var filter_section = $('<section id="filters"></section>');
