--- a/custom/care_pathways/templates/care_pathways/adoption_disaggregated_report.html
+++ b/custom/care_pathways/templates/care_pathways/adoption_disaggregated_report.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block js-inline %}
+    <link href="{% static 'care_pathways/css/care_pathways.css' %}" rel="stylesheet"/>
     <script type="text/javascript">
         $(function() {
             var filter_section = $('<section id="filters"></section>');
