--- a/custom/care_pathways/templates/care_pathways/table_card_report.html
+++ b/custom/care_pathways/templates/care_pathways/table_card_report.html
@@ -5,6 +5,7 @@
 
 {% block js %}{{ block.super }}
     <link href="{% static 'hqwebapp/js/lib/nvd3/nv.d3.css' %}" rel="stylesheet">
+    <link href="{% static 'care_pathways/css/care_pathways.css' %}" rel="stylesheet"/>
     <script src="{% static 'hqwebapp/js/lib/nvd3/lib/d3.v3.js' %}"></script>
     <script src="{% static 'hqwebapp/js/lib/nvd3/nv.d3.min.js' %}"></script>
 {% endblock %}
