--- a/corehq/apps/fixtures/templates/fixtures/partials/edit_table_modal.html
+++ b/corehq/apps/fixtures/templates/fixtures/partials/edit_table_modal.html
@@ -9,7 +9,7 @@
             <label class="control-label">{% trans "Table ID" %}</label>
             <input type="text" class="control" data-bind="value: tag"/>
             <label class="control-label">{% trans "Visible to all users? " %}
-                <input type="checkbox" class="select-bulk" data-bind="checked: is_global" style="vertical-align: top;"/>
+                <input type="checkbox" data-bind="checked: is_global" style="vertical-align: top;"/>
             </label>
         </div>
         <h4>{% trans "Fields" %}</h4>
@@ -33,12 +33,12 @@
                             <input type="text" class="input-small" data-bind="value: editTag, hasfocus: true"/>
                         </td>
                         <td>
-                            <input type="checkbox" class="select-bulk" data-bind="checked: remove, visible: !is_new()"/>  
+                            <input type="checkbox" data-bind="checked: remove, visible: !is_new()"/>
                             <!-- ko if:is_new -->
                             <button class="btn btn-danger" data-bind="click: remove_if_new " style="vertical-align: top;">
                                     <i class="icon-white icon-trash"></i>
                             </button>
-                            <!-- /ko -->                      
+                            <!-- /ko -->
                         </td>
                         <!-- /ko -->
                         <!-- ko if: with_props -->
