--- a/corehq/apps/domain/templates/domain/internal_settings.html
+++ b/corehq/apps/domain/templates/domain/internal_settings.html
@@ -1,15 +1,12 @@
 {% extends "settings/base_template.html" %}
 {% load hqstyle_tags %}
 {% load hq_shared_tags %}
+{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block main_column %}
     <form id="update-project-info" class="form-horizontal disable-on-submit" method="post">
-        {% bootstrap_form_errors form %}
-        {% bootstrap_fieldset form "Internal Settings" %}
-        <div class="form-actions">
-            <button type="submit" class="btn btn-primary">{% trans "Update Project Information" %}</button>
-        </div>
+        {% crispy form %}
     </form>
 {% endblock %}
 
