--- a/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
+++ b/corehq/apps/userreports/templates/userreports/partials/report_filter_configuration.html
@@ -49,5 +49,9 @@
     </button>
 {% endblock %}
 
-
-
+{% block post_table_content %}
+    <input name="sort_properties" type="text" data-bind="
+        visible: false,
+        value: serializedSortProperties
+    ">
+{% endblock %}
