--- a/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
+++ b/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
@@ -44,7 +44,7 @@
             </td>
             <td class="cell-vertical-centered">
                 <a class="btn" href='{% url "export_custom_data" domain export.get_id %}?format=html&limit=50&{{ get_filter_params.urlencode|safe }}'>
-                    {% trans "HTML Preview" %}
+                    {% trans "Web Preview" %}
                 </a>
             </td>
             {% if allow_edit %}
