--- a/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/case_export_data.html
@@ -86,7 +86,7 @@
                     </td>
                     <td class="cell-vertical-centered">
                         <a class="btn" href='{% url "export_custom_data" domain export.get_id %}?type=case&format=html&limit=50&{{ get_filter_params.urlencode|safe }}'>
-                            {% trans "HTML Preview" %}
+                            {% trans "Web Preview" %}
                         </a>
                     </td>
                     <td class="cell-vertical-centered">
